@@ -68,7 +68,7 @@ func DecoderSpec(c gs.Context) {
 				pack.Message.SetPayload(data)
 				packs, err := decoder.Decode(pack)
 				c.Expect(len(packs), gs.Equals, 0)
-				c.Expect(err.Error(), gs.Equals, "Failed parsing: "+data)
+				c.Expect(err.Error(), gs.Equals, "Failed parsing: LPeg grammar failed to match payload: "+data)
 				c.Expect(decoder.processMessageFailures, gs.Equals, int64(1))
 				decoder.Shutdown()
 			})
@@ -285,7 +285,7 @@ func DecoderSpec(c gs.Context) {
 			pack.Message.SetPayload(data)
 			packs, err := decoder.Decode(pack)
 			c.Expect(len(packs), gs.Equals, 0)
-			c.Expect(err.Error(), gs.Equals, "Failed parsing: "+data)
+			c.Expect(err.Error(), gs.Equals, "Failed parsing:  payload: "+data)
 			c.Expect(decoder.processMessageFailures, gs.Equals, int64(1))
 			decoder.Shutdown()
 		})
@@ -345,7 +345,7 @@ HugePages_Free:        0
 			pack.Message.SetPayload(data)
 			packs, err := decoder.Decode(pack)
 			c.Expect(len(packs), gs.Equals, 0)
-			c.Expect(err.Error(), gs.Equals, "Failed parsing: "+data)
+			c.Expect(err.Error(), gs.Equals, "Failed parsing:  payload: "+data)
 			c.Expect(decoder.processMessageFailures, gs.Equals, int64(1))
 			decoder.Shutdown()
 		})
@@ -455,7 +455,7 @@ HugePages_Free:        0
 			pack.Message.SetPayload(data)
 			packs, err := decoder.Decode(pack)
 			c.Expect(len(packs), gs.Equals, 0)
-			c.Expect(err.Error(), gs.Equals, "Failed parsing: "+data)
+			c.Expect(err.Error(), gs.Equals, "Failed parsing:  payload: "+data)
 			c.Expect(decoder.processMessageFailures, gs.Equals, int64(1))
 			decoder.Shutdown()
 		})
@@ -524,7 +524,7 @@ HugePages_Free:        0
 			pack.Message.SetPayload(data)
 			packs, err := decoder.Decode(pack)
 			c.Expect(len(packs), gs.Equals, 0)
-			c.Expect(err.Error(), gs.Equals, "Failed parsing: "+data)
+			c.Expect(err.Error(), gs.Equals, "Failed parsing:  payload: "+data)
 			c.Expect(decoder.processMessageFailures, gs.Equals, int64(1))
 			decoder.Shutdown()
 		})
@@ -593,7 +593,7 @@ HugePages_Free:        0
 			pack.Message.SetPayload(data)
 			packs, err := decoder.Decode(pack)
 			c.Expect(len(packs), gs.Equals, 0)
-			c.Expect(err.Error(), gs.Equals, "Failed parsing: "+data)
+			c.Expect(err.Error(), gs.Equals, "Failed parsing:  payload: "+data)
 			c.Expect(decoder.processMessageFailures, gs.Equals, int64(1))
 			decoder.Shutdown()
 		})
@@ -656,7 +656,7 @@ HugePages_Free:        0
 			pack.Message.SetPayload(data)
 			packs, err := decoder.Decode(pack)
 			c.Expect(len(packs), gs.Equals, 0)
-			c.Expect(err.Error(), gs.Equals, "Failed parsing: "+data)
+			c.Expect(err.Error(), gs.Equals, "Failed parsing:  payload: "+data)
 			c.Expect(decoder.processMessageFailures, gs.Equals, int64(1))
 			decoder.Shutdown()
 		})
